--- a/gb/16/7/30/n8153148.md
+++ b/gb/16/7/30/n8153148.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/esmwkr345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国学生批判思维力先胜后衰 原因在这里</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/07/20160210_GettyImages-chinese_students-600x400.jpg" />
 <h6>根据斯坦福大学研究最新研究，中国大学新生某些批判性思维能力领先其它国家，但后继乏力。(WANG ZHAO/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2016年07月31日讯】（大纪元记者吴英编译报导）根据一项最新研究，中国的大学新生某些<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E6%89%B9%E5%88%A4%E6%80%A7%E6%80%9D%E7%BB%B4.md#1">批判性思维</a>（critical thinking）能力领先其它国家，但在进入大学即后继乏力。此研究仅分析了计算机科学和工程学科专业的大学生。</p>
-<p>《纽约时报》30日报导，过去外界认为在中国教育体制下，大陆中小学学生像个考试机器，只会背诵答案，没有思考能力，然而，<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%A4%A7%E5%AD%A6.md#1">斯坦福大学</a>（Stanford University）研究人员的最新研究得到不太一样的结论。</p>
-<p><strong><ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%A4%A7%E5%AD%A6.md#1">斯坦福大学</a>研究：中国大学新生某些<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E6%89%B9%E5%88%A4%E6%80%A7%E6%80%9D%E7%BB%B4.md#1">批判性思维</a>能力强</strong></p>
+	<p>【大纪元2016年07月31日讯】（大纪元记者吴英编译报导）根据一项最新研究，中国的大学新生某些<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%89%B9%E5%88%A4%E6%80%A7%E6%80%9D%E7%BB%B4.md#1">批判性思维</a>（critical thinking）能力领先其它国家，但在进入大学即后继乏力。此研究仅分析了计算机科学和工程学科专业的大学生。</p>
+<p>《纽约时报》30日报导，过去外界认为在中国教育体制下，大陆中小学学生像个考试机器，只会背诵答案，没有思考能力，然而，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%A4%A7%E5%AD%A6.md#1">斯坦福大学</a>（Stanford University）研究人员的最新研究得到不太一样的结论。</p>
+<p><strong><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%A4%A7%E5%AD%A6.md#1">斯坦福大学</a>研究：中国大学新生某些<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%89%B9%E5%88%A4%E6%80%A7%E6%80%9D%E7%BB%B4.md#1">批判性思维</a>能力强</strong></p>
 <p>这项研究发现，计算机科学和工程专业的中国大学新生，批判性思维能力较美国或俄罗斯的大学新生超越两到三年，这些技能包括识别推定（identify assumptions）、验证假设（test hypotheses）以及演绎变量关系的能力。</p>
 <p>然而，中国大学新生的批判性思维能力，在进入大学的两年期间完成没有起色，但美国和俄罗斯的同侪却是突飞猛进。</p>
 <p>斯坦福大学研究人员洛雅尔卡（Prashant Loyalka）表示：“这令人感到震惊，中国大陆培养（批判性思维能力）超越其他国家同侪数年的大学生，但他们在进入大学后出现筋疲力尽的现象，没有继续向前的动力。”</p>
@@ -17,9 +17,9 @@
 <p>中国的大学生表示，他们习惯的小学及中学高压的填鸭式教学，到了大学完全消失了。就读天津城建大学（Chengjian University）电机工程系的王淳维（Wang Chunwei，音译）说：“教授们不知道怎么吸引学生的注意力，上课好像在逐字诵读一本书。”</p>
 <p>有些人认为，中国的学生上大学之前，在高压下拚命准备一试定终生的高考，到了大学后，压力消失。在北京的环境工程研究生王圻（Wang Qi，音译）说：“进了大学，不管有没有用功读书，都会毕业，所以何必读书？”</p>
 <p><strong>中国高等教育教学品质差</strong></p>
-<p>斯坦福大学的研究人员认为，<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%A4%A7%E5%AD%A6%E7%94%9F.md#1">中国大学生</a>批判性思维能力停滞不前的重要原因是，中国大陆高等教育教学质量差。中国的大学会奖励教授的研究成果，而没有重视他们的教学能力。此外，据官方统计，几乎所有入学的大学生都可以在四年内顺利毕业，这也会降低教授对教学的重视程度。</p>
+<p>斯坦福大学的研究人员认为，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%A4%A7%E5%AD%A6%E7%94%9F.md#1">中国大学生</a>批判性思维能力停滞不前的重要原因是，中国大陆高等教育教学质量差。中国的大学会奖励教授的研究成果，而没有重视他们的教学能力。此外，据官方统计，几乎所有入学的大学生都可以在四年内顺利毕业，这也会降低教授对教学的重视程度。</p>
 <p>研究中国教育三十年的经济学家罗泽尔（Scott Rozelle）说：“中国的大学教授不会当掉大学生，每个大学生都会顺利毕业。”</p>
-<p><strong>就业前景暗淡 <ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%A4%A7%E5%AD%A6%E7%94%9F.md#1">中国大学生</a>失去学习动力</strong></p>
+<p><strong>就业前景暗淡 <ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%A4%A7%E5%AD%A6%E7%94%9F.md#1">中国大学生</a>失去学习动力</strong></p>
 <p>此外，中国经济放缓造成大学生毕业后很难找到工作，约二成毕业生仍待业中，有些则只能找到低薪工作。</p>
 <p>吕嘉伟（Lu Jiawei，音译），目前就读北京信息科技大学（Information Science and Technology University）工程管理系，表示就业前景不佳导致学生失去动力。她说：“有些学生干脆放弃，因为不管怎么努力，仍然无法得到梦寐以求的工作。”</p>
 <p>高等教育体制的混乱让学生感到无奈。牛芙芝（Niu Fuzhi，音译）表示，二年前刚进入哈尔滨商业大学（Harbin University of Commerce）就读计算机科学系时，对学校寄予厚望，但很快就失望了，因为教授只专注在传授艰深的高层次理论，对一片混乱的教室浑然不觉。</p>
@@ -33,51 +33,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/7/15/n4481260.md#1">台9大学涨学费遭批黑箱 立委要求撤案</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/7/29/n4491182.md#1">抗议9校涨学费  台反教盟洒冥纸</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/1/15/n4617614.md#1">小爱成就大爱 南非大学生募钜款助贫生</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/5/18/n7907388.md#1">台世新涨学杂费 800学生连署要求撤回</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/5/21/n7915707.md#1">台教长上任 面临课纲等4大难题</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/5/24/n7925600.md#1">办好大学需要钱  台老牌私校盼调涨学费</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/5/30/n7943508.md#1">营养午餐浪费  台教长盼加强食育教育</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/5/30/n7943942.md#1">大学盼调涨学杂费 台教长：现在非好时机</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/11/n13639284.md#1">清明连假将至 离岛海运增至875航次</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13636988.md#1">陆女偷渡来台卖淫 台警破获幕后人蛇集团</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/2/11/n4637771.md#1">中国小留学生蜂拥进美国教会中学</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/2/20/n4644348.md#1">大陆大学生就业  网路相关专业最热门</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/2/24/n4646850.md#1">2016年大陆4个群体或将迎来失业潮</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/5/10/n7878934.md#1">毕业变“无薪民工” 大陆大学生就业难酿危机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/2/11/n4637771.md#1">中国小留学生蜂拥进美国教会中学</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/2/20/n4644348.md#1">大陆大学生就业  网路相关专业最热门</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/2/24/n4646850.md#1">2016年大陆4个群体或将迎来失业潮</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/5/10/n7878934.md#1">毕业变“无薪民工” 大陆大学生就业难酿危机</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/22/n10801600.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/12/n11446723.md#1" target="_blank">曹长青：美国成为唯一超强的秘密</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637209.md#1">【财商天下】制裁不断加码 中共救不了俄罗斯</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637763.md#1">【横河观点】韩国大选另类输者 俄侵乌中共失算</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637288.md#1">专访吴国光：俄乌战局 习与权势集团分裂</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13629102.md#1">俄政府内被爆“末日恐慌”忧战败及经济崩盘</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13632875.md#1">英男咖啡因中毒身亡 摄取量相当于200杯咖啡</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631361.md#1">【一线采访】疑打疫苗后患白血病 中共严控消息</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631331.md#1">首位艺人从军阵亡 乌国33岁男星最后身影曝光</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630730.md#1">朱芯仪36岁生日宣布得乳癌 曝病况泪谢丈夫陪伴</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13628592.md#1">燕麦：健康、被低估的超级食品</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630345.md#1">为何有些航空公司不使用空桥让乘客登机？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13633200.md#1">杏鲍菇酱香入味一诀窍 5分钟脆嫩鲜甜上菜</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/30/n8153148.htm">中国学生批判思维力先胜后衰 原因在这里</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/30/n8153148.htm">中国学生批判思维力先胜后衰 原因在这里</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/esmwkr345/djy/blob/master/gb/16/7/30/n8153148.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/16/7/30/n8153148.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
